+ added new job position; + fixed some font size issues on mobile view; + added less into devDependencies

--- a/new/css/styles.less
+++ b/new/css/styles.less
@@ -6,8 +6,13 @@
 @transition-time: .33s;
 
 /* css reset */
-* { box-sizing: border-box; }
-html, body { height: 100%; }
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
 
 body {
   overflow: hidden;
@@ -22,8 +27,9 @@ body {
   -moz-@{property}: @value;
   -ms-@{property}: @value;
   -o-@{property}: @value;
-  @{property}: @value;
+    @{property}: @value;
 }
+
 .transition (@prop: all, @time: 1s, @ease: linear) {
   .vendor(transition, @prop @time @ease);
 }
@@ -40,7 +46,9 @@ body {
     border-color: #ccc;
     cursor: default;
 
-    &:hover { background: #fff; }
+    &:hover {
+      background: #fff;
+    }
   }
 }
 
@@ -62,7 +70,9 @@ nav {
     text-decoration: none;
     font: bold .8em/1.5 sans-serif;
 
-    &:hover { background-color: rgba(0, 0, 0, .25); }
+    &:hover {
+      background-color: rgba(0, 0, 0, .25);
+    }
   }
 }
 
@@ -79,10 +89,14 @@ article {
   overflow: hidden;
   .transition(all, @transition-time);
 
-  [data-name] { text-align: center; }
+  [data-name] {
+    text-align: center;
+  }
 
   [data-align="center"] {
-    &, div, h1, h2, h3, h4, h5, p {text-align: center !important;}
+    &, div, h1, h2, h3, h4, h5, p {
+      text-align: center !important;
+    }
   }
 
   /* style article content */
@@ -141,6 +155,13 @@ article {
       vertical-align: baseline;
       font-size: 1em;
     }
+
+    @media only screen and (max-device-width: 680px) {
+      div {
+        font-size: 1.5em;
+      }
+    }
+
     section {
       padding: .165em 0;
       margin: 0 .66em;
@@ -149,7 +170,9 @@ article {
       margin: 0;
       padding-right: .33em;
 
-      &:after { content: ':'; }
+      &:after {
+        content: ':';
+      }
     }
   }
 
@@ -176,13 +199,21 @@ article {
         border-width: 0 0 3px 0;
         .transition(border-color, @transition-time / 2);
       }
-      &:hover:before { border-color: #ddd; }
-      &:active:before { border-color: #bbb; }
+      &:hover:before {
+        border-color: #ddd;
+      }
+      &:active:before {
+        border-color: #bbb;
+      }
     }
 
-    h2 { display: none; }
+    h2 {
+      display: none;
+    }
 
-    h3 { margin-bottom: 0; }
+    h3 {
+      margin-bottom: 0;
+    }
 
     > section {
       display: table-cell;
@@ -202,23 +233,37 @@ article {
         background: #fff;
         .transition(all, @transition-time);
 
-        div, p { text-align: left; }
+        div, p {
+          text-align: left;
+        }
 
         h4 {
-          display: inline-block;
+          font-size: inherit;
           margin: 1em .33em 0 0;
-          + p { display: inline; }
+          + p {
+            display: inline;
+          }
+        }
+
+        @media only screen and (min-device-width: 680px) {
+          h4 {
+            display: inline-block;
+          }
         }
 
         h2 {
           + section h3,
-          + p { margin-top: .33em; }
+          + p {
+            margin-top: .33em;
+          }
         }
       }
 
       input:checked {
         & + label {
-          &:before { border-color: #888; }
+          &:before {
+            border-color: #888;
+          }
           & + div {
             opacity: 1;
             z-index: 1;
@@ -298,4 +343,18 @@ footer[data-name] {
   right: 0;
   padding: 0 .33em;
   font-size: .6em;
+}
+
+@media only screen and (max-device-width: 680px) {
+  h3 {
+    font-size: 2em;
+  }
+
+  section h4 {
+    display: block;
+  }
+
+  article [data-name='section'] label {
+    font-size: 2em;
+  }
 }
